# EZEvent

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  EZEventDemo.cpp
include/: CMakeLists.txt
include/EZEvent/: Event.h
